# fastapi-initializr

./: README.md  pyproject.toml  setup.py
fastapi_initializr/: main.py
