[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "fastapi-initializr"
version = "1.0.0"
description = "A CLI tool to quickly scaffold FastAPI project structures"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
  {name = "Saad Sabahuddin", email = "saadmdsabahuddin@gmail.com"}
]
dependencies = [
    "questionary",
    "colorama",
    "requests",
    "yaspin"
]

[project.scripts]
fastapi-initializr = "fastapi_initializr.main:main"