[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "fastapi-initializr"
version = "1.0.0"
description = "A modern CLI tool that instantly scaffolds production-ready FastAPI project structures with best practices, interactive prompts, and optional configurations."
readme = {file = "README.txt", content-type = "text/markdown"}
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
  {name = "Saad Sabahuddin", email = "saadmdsabahuddin@gmail.com"}
]
keywords = [
  "fastapi",
  "initializr",
  "cli",
  "project-generator",
  "scaffold",
  "template",
  "web-development",
  "python-cli",
  "api",
  "boilerplate",
  "framework",
  "starter-project"
]
dependencies = [
    "questionary",
    "colorama",
    "requests",
    "yaspin"
]

[project.scripts]
fastapi-initializr = "fastapi_initializr.main:main"

[project.urls]
Repository="https://github.com/saadmdsabah/fastapi-initializr.git"
Issues="https://github.com/saadmdsabah/fastapi-initializr/issues"
DOWNLOAD="https://github.com/saadmdsabah/fastapi-initializr/archive/refs/heads/main.zip"